--- a/src/Components/Navbar/Navbar.css
+++ b/src/Components/Navbar/Navbar.css
@@ -128,7 +128,7 @@ body {
 /* Nav */
 .nav-d3635f1c022f {
   position: relative;
-  width: 1330px;
+  width: 100%;
   height: 80px;
   border-radius: 0px 0px 0px 0px;
   z-index: 0;
@@ -139,7 +139,7 @@ body {
   position: absolute;
   left: 0px;
   top: -0.15px;
-  width: 1330px;
+  width: 100%;
   height: 80.15px;
 }
 
@@ -521,10 +521,10 @@ body {
 
 /* Rectangle */
 .rectangle-d3633a0d17a5 {
-  position: absolute;
+  position: relative;
   left: 0px;
   top: 0.15px;
-  width: 1330px;
+  width: 100%;
   height: 75px;
   background: #14395E;
   border-radius: 0px;
